--- a/index.html
+++ b/index.html
@@ -1,93 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>EVAI Nearby</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    .user { margin: 5px 0; padding: 5px; border: 1px solid #ccc; display: flex; justify-content: space-between; }
-    #chat { border: 1px solid #ccc; padding: 10px; height: 200px; overflow-y: auto; }
-  </style>
-</head>
-<body>
-  <h1>EVAI Nearby</h1>
-  <div id="login">
-    <input id="nickname" placeholder="Your name">
-    <input id="tags" placeholder="Tags (comma separated)">
-    <button onclick="connect()">Connect</button>
-  </div>
-  <div id="main" style="display:none;">
-    <h2>Nearby People</h2>
-    <div id="users"></div>
-    <h2>Chat</h2>
-    <div id="chat"></div>
-    <input id="chatMsg" placeholder="Type message">
-    <button onclick="sendMsg()">Send</button>
-  </div>
-
-  <script>
-    let ws;
-    let myId = null;
-    let currentChatId = null;
-
-    function connect() {
-      const nickname = document.getElementById('nickname').value;
-      const tags = document.getElementById('tags').value;
-      ws = new WebSocket('ws://localhost:3000');
-
-      ws.onopen = () => {
-        ws.send(JSON.stringify({ type: 'join', nickname, tags }));
-        document.getElementById('login').style.display = 'none';
-        document.getElementById('main').style.display = 'block';
-      };
-
-      ws.onmessage = (event) => {
-        const data = JSON.parse(event.data);
-        if (data.type === 'user_list') {
-          renderUsers(data.users);
-        } else if (data.type === 'intro_request') {
-          if (confirm(data.nickname + ' wants to connect. Accept?')) {
-            ws.send(JSON.stringify({ type: 'accept_intro', to: data.from }));
-            currentChatId = data.from;
-          }
-        } else if (data.type === 'intro_accepted') {
-          alert(data.nickname + ' accepted your introduction.');
-          currentChatId = data.from;
-        } else if (data.type === 'message') {
-          document.getElementById('chat').innerHTML += '<div><b>' + data.nickname + ':</b> ' + data.text + '</div>';
-        }
-      };
-    }
-
-    function renderUsers(users) {
-      const container = document.getElementById('users');
-      container.innerHTML = '';
-      users.forEach(user => {
-        if (user.nickname && user.id !== myId) {
-          const div = document.createElement('div');
-          div.className = 'user';
-          div.innerHTML = '<span>' + user.nickname + ' (' + user.tags + ')</span>' +
-                          '<button onclick="introduce(\\'' + user.id + '\\')">Introduce</button>';
-          container.appendChild(div);
-        }
-      });
-    }
-
-    function introduce(id) {
-      ws.send(JSON.stringify({ type: 'introduce', to: id }));
-    }
-
-    function sendMsg() {
-      const text = document.getElementById('chatMsg').value;
-      if (currentChatId && text.trim() !== '') {
-        ws.send(JSON.stringify({ type: 'message', to: currentChatId, text }));
-        document.getElementById('chat').innerHTML += '<div><b>You:</b> ' + text + '</div>';
-        document.getElementById('chatMsg').value = '';
-      }
-    }
-  </script>
-</body>
-</html>
+// in your index.html, inside connect() or script:
 const protocol = location.protocol === 'https:' ? 'wss://' : 'ws://';
 const wsUrl = protocol + location.host;
 ws = new WebSocket(wsUrl);
