--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EVAI — Emotionally‑Intelligent AI</title>
-  <meta name="description" content="EVAI is a next‑generation, emotionally‑intelligent AI designed to amplify human intuition and unlock new forms of intelligence.">
-  <meta property="og:title" content="EVAI — Emotionally‑Intelligent AI">
+  <title>EVAI — Emotionally-Intelligent AI</title>
+  <meta name="description" content="EVAI is a next-generation, emotionally-intelligent AI designed to amplify human intuition and unlock new forms of intelligence.">
+  <meta property="og:title" content="EVAI — Emotionally-Intelligent AI">
   <meta property="og:description" content="Amplify human intuition. Build the future with EVAI.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/og-image.png">
-  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <meta property="og:image" content="assets/evai-thumbnail.jpg">
+  <link rel="icon" href="assets/evai-thumbnail.jpg" type="image/jpeg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
   <header class="site-nav">
     <div class="container">
       <div class="brand">
-        <img src="assets/evai-logo.svg" alt="EVAI logo" class="logo">
+        <img src="assets/evai-thumbnail.jpg" alt="EVAI logo" class="logo">
         <span>EVAI</span>
       </div>
       <nav>
@@ -31,10 +31,11 @@
   </header>
 
   <main>
+    <!-- Hero -->
     <section class="hero">
       <div class="container grid">
         <div class="hero-copy">
-          <h1>Emotionally‑Intelligent AI for Human Potential</h1>
+          <h1>Emotionally-Intelligent AI for Human Potential</h1>
           <p class="lede">EVAI blends logic with intuition to help people think clearer, create faster, and make better decisions.</p>
           <div class="cta-row">
             <a class="btn primary" href="#waitlist">Join the waitlist</a>
@@ -43,11 +44,12 @@
           <p class="tiny">By Emmanuel Vargas • Building in public</p>
         </div>
         <div class="hero-media card" role="img" aria-label="Futuristic UI mockup">
-          <img src="assets/hero-mock.png" alt="EVAI futuristic UI mockup">
+          <img src="assets/evai-thumbnail.jpg" alt="EVAI futuristic UI mockup">
         </div>
       </div>
     </section>
 
+    <!-- Features -->
     <section id="features" class="section">
       <div class="container">
         <h2>Why EVAI</h2>
@@ -61,13 +63,14 @@
             <p>Remembers your goals and adapts to your evolving journey.</p>
           </article>
           <article class="feature">
-            <h3>Open & Human‑First</h3>
+            <h3>Open & Human-First</h3>
             <p>Transparent, safe, and designed to put people before machines.</p>
           </article>
         </div>
       </div>
     </section>
 
+    <!-- How it works -->
     <section id="how" class="section alt">
       <div class="container grid">
         <div>
@@ -90,6 +93,7 @@
       </div>
     </section>
 
+    <!-- Waitlist -->
     <section id="waitlist" class="section">
       <div class="container narrow">
         <h2>Join the Waitlist</h2>
@@ -109,14 +113,20 @@
       </div>
     </section>
 
+    <!-- Demo Video -->
     <section id="demo" class="section alt">
       <div class="container narrow center">
-        <h2>See a 30‑second vision</h2>
-        <p>Add a short teaser clip or product GIF here.</p>
-        <div class="card placeholder">Your demo video goes here</div>
+        <h2>See a 30-second vision</h2>
+        <p>Watch the EVAI teaser below.</p>
+
+        <video controls width="100%" poster="assets/evai-thumbnail.jpg">
+          <source src="assets/demo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
     </section>
 
+    <!-- Contact -->
     <section id="contact" class="section">
       <div class="container narrow">
         <h2>Contact</h2>
