--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta property="og:title" content="EVAI — Emotionally-Intelligent AI">
   <meta property="og:description" content="Amplify human intuition. Build the future with EVAI.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/evai-thumbnail.jpg">
-  <link rel="icon" href="assets/evai-thumbnail.jpg" type="image/jpeg">
+  <meta property="og:image" content="assets/evai-look-thumb.jpg">
+  <link rel="icon" href="assets/evai-look-thumb.jpg" type="image/jpeg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
   <header class="site-nav">
     <div class="container">
       <div class="brand">
-        <img src="assets/evai-thumbnail.jpg" alt="EVAI logo" class="logo">
+        <img src="assets/evai-look-thumb.jpg" alt="EVAI logo" class="logo">
         <span>EVAI</span>
       </div>
       <nav>
@@ -39,12 +39,12 @@
           <p class="lede">EVAI blends logic with intuition to help people think clearer, create faster, and make better decisions.</p>
           <div class="cta-row">
             <a class="btn primary" href="#waitlist">Join the waitlist</a>
-            <a class="btn ghost" href="#demo">See a quick demo</a>
+            <a class="btn ghost" href="#demo">Watch Demo</a>
           </div>
           <p class="tiny">By Emmanuel Vargas • Building in public</p>
         </div>
         <div class="hero-media card" role="img" aria-label="Futuristic UI mockup">
-          <img src="assets/evai-thumbnail.jpg" alt="EVAI futuristic UI mockup">
+          <img src="assets/evai-look-thumb.jpg" alt="EVAI futuristic UI mockup">
         </div>
       </div>
     </section>
@@ -116,11 +116,11 @@
     <!-- Demo Video -->
     <section id="demo" class="section alt">
       <div class="container narrow center">
-        <h2>See a 30-second vision</h2>
-        <p>Watch the EVAI teaser below.</p>
+        <h2>See How EVAI Works</h2>
+        <p>A 30-second walkthrough of EVAI in action.</p>
 
-        <video controls width="100%" poster="assets/evai-thumbnail.jpg">
-          <source src="assets/demo.mp4" type="video/mp4">
+        <video controls width="100%" poster="assets/evai-look-thumb.jpg">
+          <source src="assets/evai-look.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
